--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <button onclick="$('.settings').toggleClass('settings-showing')"><span>Settings</span></button>
     <ul class="settings">
         <li><p>automatically search?<gap/><input id="autosearch" type="checkbox"></p></li>
+        <li><p>sites to include results of?</p><select multiple id="sitesincluded"> <!--the "sbid" identifies each option while letting the inner text be changed-->
+            <option selected sbid="xxx">rule34.xxx (tags are xxx:tag, <i>limit is always 10</i>)</option> <!--i applaud whoever made this site because holy the api is so clean-->
+            <option selected sbid="gel">gelbooru.com (tags are gel:tag)</option> <!--runs on the same software as rule34.xxx, shouldnt be too hard  edit: omg its easier than rule34.xxx-->
+        </select></li>
+        <li><p>search result limits for <i>every individual site</i>?</p><input type="number" value="10" id="limit"></li>
     </ul>
 </header>
 <body>
